--- a/app/design/frontend/base/default/template/checkout/cart/minicart.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/minicart.phtml
@@ -11,10 +11,9 @@
 
 /** @var Mage_Checkout_Block_Cart_Sidebar $this */
 ?>
-
 <?php $qty = $this->getSummaryCount() ?: 0 ?>
 <a href="<?= $this->helper('checkout/cart')->getCartUrl() ?>" data-target-element="header-cart" class="skip-link skip-cart" title="<?= $this->__('Cart') ?>">
-    <span class="icon"></span>
+    <?= $this->getIconSvg('shopping-bag') ?>
     <span class="label"><?= $this->__('Cart') ?></span>
     <span class="count count-<?= $qty ?>"><?= $qty ?></span>
 </a>
