--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -2771,11 +2771,11 @@ body {
 }
 
 .skip-link * {margin:0 !important; text-transform: none; line-height:normal; font-size: 0.688rem}
-.skip-link .icon {
-  display: inline-block;
+.skip-link svg {
   width:30px;
   height:30px;
   background-size: 30px;
+  stroke-width: 1.5;
 }
 
 @media (max-width: 770px) {
@@ -2827,13 +2827,6 @@ body {
   .account-cart-wrapper {
     position: static;
   }
-}
-
-/* ============================================ *
- * Nav - Skip Link
- * ============================================ */
-.skip-nav .icon {
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" /></svg>');
 }
 
 /* ============================================ *
@@ -3085,49 +3078,24 @@ body {
 }
 
 #search_mini_form .search-button {
-  text-indent: -9999px;
+  color: var(--maho-color-text-primary);
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -1px;
+  right: 2px;
   width: 40px;
   height: 40px;
   border: 0;
   background: none;
-}
-
-#search_mini_form .search-button:before, .skip-search .icon {
-  content: '';
-  position: absolute;
-  top: 2px;
-  right: 2px;
-  width: 30px;
-  height: 30px;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23999" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" /></svg>');
-}
-
-#search_mini_form .search-button:hover:before {
   opacity: 0.8;
 }
 
-#search_mini_form .search-button:active:before {
-  margin-top: -13px;
-  margin-left: -13px;
+#search_mini_form .search-button:hover {
+  opacity: 1;
 }
 
 /* ============================================ *
  * Header - Account
  * ============================================ */
-.skip-wishlist .icon {
-  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" /></svg>');
-  mask-repeat: no-repeat;
-  background-color: var(--maho-color-text-secondary);
-}
-
-.skip-account .icon, #customer-reviews dt:before {
-  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23999" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" /></svg>');
-  mask-repeat: no-repeat;
-  background-color: var(--maho-color-text-secondary);
-}
 
 #customer-reviews dt:before {
   content: '';
@@ -3135,6 +3103,7 @@ body {
   margin-left: -25px;
   width: 20px;
   height: 20px;
+  background-size: 20px;
 }
 
 @media only screen and (min-width: 771px) {
@@ -3218,10 +3187,6 @@ body {
 /* ============================================ *
  * Header - Cart
  * ============================================ */
-.skip-cart .icon {
-  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23999" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /></svg>');
-  background-color: var(--maho-color-text-secondary);
-}
 
 @media only screen and (min-width: 771px) {
   .skip-cart {
