--- a/app/design/frontend/base/default/template/tag/customer/view.phtml
+++ b/app/design/frontend/base/default/template/tag/customer/view.phtml
@@ -46,12 +46,12 @@
                 <?php if ($this->helper('wishlist')->isAllow()) : ?>
                 <ul class="add-to-links">
                     <li>
-                        <a href="#"
-                           class="link-wishlist"
+                        <a href="#" class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
                            onclick="customFormSubmit(
                                    '<?= $this->getAddToWishlistUrlCustom($_product, false) ?>',
                                    '<?= $this->escapeHtml(json_encode(['form_key' => $params[Mage_Core_Model_Url::FORM_KEY]])) ?>',
                                    'post')">
+                            <?= $this->getIconSvg('heart') ?>
                             <?= $this->__('Add to Wishlist') ?>
                         </a>
                     </li>
