--- a/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
@@ -27,31 +27,9 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
         <?php if ($this->hasProductUrl()):?>
             </a>
         <?php endif ?>
-
-        <ul class="cart-links">
-            <?php if ($isVisibleProduct): ?>
-                <li>
-                    <a href="<?= $this->getConfigureUrl() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Edit item parameters')) ?>"><?= $this->__('Edit') ?></a>
-                </li>
-            <?php endif ?>
-
-            <?php if ($this->helper('wishlist')->isAllowInCart() && $isVisibleProduct) : ?>
-                <li>
-                    <a href="<?= $this->helper('wishlist')->getMoveFromCartUrl($_item->getId()) ?>" class="link-wishlist use-ajax"><?= $this->__('Move to wishlist') ?></a>
-                </li>
-            <?php endif ?>
-        </ul>
     </td>
 
     <td class="product-cart-info">
-
-        <a href="#"
-           title="<?= Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>"
-           class="btn-remove btn-remove2"
-           onclick="customFormSubmit('<?= $_deleteUrl ?>', '<?= $_params ?>', 'post')">
-            <?= $this->__('Remove Item') ?>
-        </a>
-
         <h2 class="product-name">
         <?php if ($this->hasProductUrl()):?>
             <a href="<?= $this->getProductUrl() ?>"><?= $this->escapeHtml($this->getProductName()) ?></a>
@@ -205,23 +183,6 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
 
         <button type="submit" name="update_cart_action" data-cart-item-update value="update_qty" title="<?= Mage::helper('core')->quoteEscape($this->__('Update')) ?>" class="button btn-update"><?= $this->__('Update') ?>
         </button>
-
-        <ul class="cart-links">
-            <?php if ($isVisibleProduct): ?>
-                <li>
-                    <a href="<?= $this->getConfigureUrl() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Edit item parameters')) ?>"><?= $this->__('Edit') ?></a>
-                </li>
-            <?php endif ?>
-
-            <?php if ($this->helper('wishlist')->isAllowInCart()) : ?>
-            <li>
-                <?php if ($isVisibleProduct): ?>
-                    <a href="<?= $this->helper('wishlist')->getMoveFromCartUrl($_item->getId()) ?>" class="link-wishlist use-ajax"><?= $this->__('Move to wishlist') ?></a>
-                <?php endif ?>
-            </li>
-            <?php endif ?>
-        </ul>
-
     </td>
 
     <!--Sub total starts here -->
@@ -319,10 +280,23 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
     </td>
     <?php endif ?>
     <td class="a-center product-cart-remove">
-        <a href="#"
-           title="<?= Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>"
-           class="btn-remove btn-remove2"
+        <?php if ($isVisibleProduct): ?>
+            <a href="<?= $this->getConfigureUrl() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Edit item parameters')) ?>">
+                <?= $this->getIconSvg('edit') ?>
+                <?= $this->__('Edit') ?>
+            </a>
+        <?php endif ?>
+
+        <?php if ($this->helper('wishlist')->isAllowInCart() && $isVisibleProduct) : ?>
+            <a href="<?= $this->helper('wishlist')->getMoveFromCartUrl($_item->getId()) ?>" class="link-wishlist use-ajax" title="<?= Mage::helper('core')->quoteEscape($this->__('Move to wishlist')) ?>">
+                <?= $this->getIconSvg('heart') ?>
+                <?= $this->__('Move to wishlist') ?>
+            </a>
+        <?php endif ?>
+
+        <a href="#" title="<?= Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>"
            onclick="customFormSubmit('<?= $_deleteUrl ?>', '<?= $_params ?>', 'post')">
+            <?= $this->getIconSvg('x') ?>
             <?= $this->__('Remove Item') ?>
         </a>
     </td>
