fix a lot of stuff in the cart

--- a/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
@@ -279,7 +279,7 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
         <?php endif ?>
     </td>
     <?php endif ?>
-    <td class="a-center product-cart-remove">
+    <td class="product-cart-remove">
         <?php if ($isVisibleProduct): ?>
             <a href="<?= $this->getConfigureUrl() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Edit item parameters')) ?>">
                 <?= $this->getIconSvg('edit') ?>
