--- a/public/skin/frontend/base/default/css/checkout.css
+++ b/public/skin/frontend/base/default/css/checkout.css
@@ -63,6 +63,10 @@
     float: right;
 }
 
+td.product-cart-remove a {
+    display: inline-block;
+}
+
 @media only screen and (max-width: 979px) {
     .display-single-price .cart-table {
         float: none;
@@ -186,7 +190,7 @@
     margin-bottom: 7px;
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 599px) {
     .checkout-types {
         float: none;
         text-align: center;
@@ -369,9 +373,6 @@
         padding-left: 15px;
         margin-bottom: 6px;
     }
-    .cart-table td[data-rwd-label] .price {
-        font-weight: normal;
-    }
     .cart-table td[data-rwd-label]:before {
         content: attr(data-rwd-label) ":";
         font-size: 0.75rem;
@@ -380,9 +381,6 @@
     }
     .cart-table td.product-cart-price {
         text-align: left;
-    }
-    .cart-table h2 {
-        font-size: 0.75rem;
     }
     .cart-table .cart-tax-info {
         font-style: italic;
@@ -405,8 +403,8 @@
     }
     .cart-table .product-cart-info,
     .cart-table td[data-rwd-label] {
-        float: right;
-        width: 75%;
+        float: left;
+        width: 65%;
     }
     .cart-table .product-cart-actions,
     .cart-table .product-cart-price {
@@ -414,7 +412,14 @@
         padding-top: 0;
         float: right;
     }
-    .cart-table .product-cart-remove,
+    .cart-table td.product-cart-remove {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
     .cart-table .product-cart-total {
         display: none;
     }
