--- a/app/design/frontend/base/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list.phtml
@@ -124,14 +124,38 @@
     <?php $_columnCount = $this->getColumnCount(); ?>
     <ul class="products-grid products-grid--max-<?= $_columnCount ?>-col">
         <?php $i=0; foreach ($_productCollection as $_product): ?>
-            <li class="item">
-                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
-                    <?php $_imgSize = 210; ?>
-                    <img id="product-collection-image-<?= $_product->getId() ?>" width="<?= $_imgSize ?>" height="<?= $_imgSize ?>"
-                         src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>"
-                         srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize * 2) ?> 2x"
-                         alt="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
-                </a>
+            <li>
+                <div>
+                    <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
+                        <?php $_imgSize = 210; ?>
+                        <img id="product-collection-image-<?= $_product->getId() ?>" width="<?= $_imgSize ?>" height="<?= $_imgSize ?>"
+                             src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>"
+                             srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize * 2) ?> 2x"
+                             alt="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+                    </a>
+                    <ul>
+                        <?php if ($this->helper('wishlist')->isAllow()) : ?>
+                            <?php $_wishlistUrl = $this->helper('wishlist')->getAddUrlWithCustomParams($_product, [], false); ?>
+                            <li>
+                                <a href="#" data-url="<?= $_wishlistUrl ?>" data-params="<?= $_params ?>"
+                                   class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
+                                   onclick="customFormSubmit('<?= $_wishlistUrl ?>', '<?= $_params ?>', 'post')">
+                                    <?= $this->getIconSvg('heart') ?>
+                                    <?= $this->__('Add to Wishlist') ?>
+                                </a>
+                            </li>
+                        <?php endif ?>
+                        <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
+                            <li>
+                                <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+                                   onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
+                                    <?= $this->getIconSvg('scale') ?>
+                                    <?= $this->__('Add to Compare') ?>
+                                </a>
+                            </li>
+                        <?php endif ?>
+                    </ul>
+                </div>
                 <div class="product-info">
                     <h2 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h2>
                     <?php
@@ -164,28 +188,6 @@
                         <?php else: ?>
                             <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
                         <?php endif ?>
-                        <ul class="add-to-links">
-                            <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                <?php $_wishlistUrl = $this->helper('wishlist')->getAddUrlWithCustomParams($_product, [], false); ?>
-                                <li>
-                                    <a href="#" data-url="<?= $_wishlistUrl ?>" data-params="<?= $_params ?>"
-                                       class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
-                                       onclick="customFormSubmit('<?= $_wishlistUrl ?>', '<?= $_params ?>', 'post')">
-                                        <?= $this->getIconSvg('heart') ?>
-                                        <?= $this->__('Add to Wishlist') ?>
-                                    </a>
-                                </li>
-                            <?php endif ?>
-                            <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
-                                <li>
-                                    <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
-                                       onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
-                                        <?= $this->getIconSvg('scale') ?>
-                                        <?= $this->__('Add to Compare') ?>
-                                    </a>
-                                </li>
-                            <?php endif ?>
-                        </ul>
                     </div>
                 </div>
             </li>
